# Menus

./: README.md
src/: .gitignore  alembic.ini  pyproject.toml  requirements.txt
src/alembic/versions/: 2024_01_20_0014-9501b1433a2b_create_tables.py  52a817c2cd6f_create_tables.py
src/app/: config.py  main.py
src/app/database/: db.py  models.py
src/app/database/dal/: dish_dal.py  menu_dal.py  submenu_dal.py
src/app/database/service/: dish_service.py  menu_service.py  submenu_service.py
src/app/dish/: router.py  schemas.py
src/app/menu/: router.py  schemas.py
src/app/submenu/: router.py  schemas.py
